--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
+        "maatwebsite/excel": "^1.1",
         "yajra/laravel-datatables-oracle": "^12.3"
     },
     "require-dev": {
