--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^1.1",
+        "phpoffice/phpword": "^1.3",
         "yajra/laravel-datatables-oracle": "^12.3"
     },
     "require-dev": {
