--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^1.1",
         "phpoffice/phpword": "^1.3",
+        "spatie/laravel-permission": "^6.19",
         "yajra/laravel-datatables-oracle": "^12.3"
     },
     "require-dev": {
